<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backAuth">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:src="@drawable/ic_nike_logo"
        app:tint="@color/white"
        />
    <TextView
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline5"
        android:text="@string/createAccount"/>
    <TextView
        android:layout_marginTop="8sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        android:text="@string/enter_email_pass"
        android:alpha="0.8"/>
    <EditText
        android:gravity="right|center_vertical"
        android:id="@+id/et_email_Singup"
        android:layout_width="@dimen/itemAuthWight"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_back_edit"
        style="@style/Theme.auth.Edit"
        android:hint="@string/email"
        android:layout_marginTop="16sp"/>
    <EditText
        android:gravity="right|center_vertical"
        android:id="@+id/et_pass_Singup"
        android:layout_width="@dimen/itemAuthWight"
        android:layout_height="wrap_content"
        style="@style/Theme.auth.Edit"
        android:background="@drawable/auth_back_edit"
        android:layout_marginTop="12sp"
        android:hint="@string/pass"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/itemAuthWight"
        android:id="@+id/btn_singUp"
        android:layout_height="wrap_content"
        style="@style/Theme.auth.BtnLogin"
        android:layout_marginTop="16sp"
        android:text="@string/singUp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        android:text="@string/doYouHaveAccount"
        android:layout_marginTop="32sp"
        android:alpha="0.4"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sinUpToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/matrieal_buttom"
        android:text="@string/login"
        android:textAppearance="?textAppearanceBody1"
        />
</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>