<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    tools:context=".feucher.shipping.ShippingActivity">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:background="?colorSurface">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/shippingToolbarTitle"
            android:layout_marginStart="22sp"/>
        <ImageView
            android:layout_width="22sp"
            android:layout_height="22sp"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:id="@+id/img_backShipping"/>
    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="52sp"
            android:clipToPadding="false">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputL"
                app:helperText="@string/Helper_name"
                android:id="@+id/mIl_name"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEt"
                    android:hint="@string/name"
                    android:text="علیرضا"
                    android:id="@+id/mEt_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputL"
                app:helperText="@string/HelperFname"
                android:id="@+id/mIl_Fname"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEt"
                    android:text="بهدادمهر"
                    android:hint="@string/Fname"
                    android:id="@+id/mEt_Fname"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputL"
                app:helperText="@string/Helper_phoneNumber"
                android:id="@+id/mIl_phoneNumber"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEt"
                    android:text="۰۹۱۲۳۳۳۴۵۵۴"
                    android:hint="@string/phoneNumber"
                    android:inputType="number"
                    android:id="@+id/mEt_phoneNumber"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputL"
                app:helperText="@string/Helper_postalCode"
                android:id="@+id/mIl_postalCode"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEt"
                    android:hint="@string/postalCode"
                    android:text="۱۲۳۴۵۶۷۸۹۰"
                    android:inputType="number"
                    android:id="@+id/mEt_postalCode"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputL"
                app:helperText="@string/Helper_address"
                android:id="@+id/mIl_address"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEt"
                    android:hint="@string/address"
                    android:id="@+id/mEt_address"
                    android:text="تهرانو بلوار ۱۲ بلوک ۱"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <include layout="@layout/item_recycler_cart_purchase"
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewPurchaseShipping"
                android:layout_marginTop="16sp"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="8sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAppearance="?textAppearanceBody1"
                    android:text="@string/payDelivery"
                    android:id="@+id/btnPayDelivery"
                    app:icon="@drawable/pay_truck_173290"
                    app:cornerRadius="8sp"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:textAppearance="?textAppearanceBody1"
                    app:iconGravity="end"
                    android:text="@string/onlinePay"
                    android:id="@+id/btnPayOnline"
                    app:icon="@drawable/baseline_credit_card_24"
                    android:layout_marginStart="26sp"
                    android:paddingBottom="12sp"
                    android:paddingTop="12sp"
                    app:cornerRadius="8sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>