<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".feucher.checkout.CheckoutActivity">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/paymentReceipt"
            android:layout_marginStart="22sp"
            />
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/ic_back"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:id="@+id/btn_backCheckout"/>
    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/paymentSuccess"
            android:textSize="20sp"
            android:textColor="?colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16sp"
            android:id="@+id/txt_paymentSuccess"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/TanksForBuying"
            android:textColor="?colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:id="@+id/txt_tanks"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:id="@+id/img_emptyCheckOut"
            android:src="@drawable/cart_payment_success"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_stableStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/paymentStatus"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_paymentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    tools:text="@string/inProcess"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_stableStatus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_stableStatus" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1sp"
                    android:layout_marginTop="16dp"
                    android:background="?dividerColorMy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_stableStatus" />

                <TextView
                    android:id="@+id/txt_stablePaymentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/paymentPrice"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />

                <TextView
                    android:id="@+id/txt_paymentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_stablePaymentPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_stablePaymentPrice"
                    tools:text="۲,۲۰۰,۰۰۰"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16sp"
                android:gravity="center_horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAppearance="?textAppearanceBody1"
                    android:text="@string/payHistory"
                    app:icon="@drawable/hisorypay"
                    app:cornerRadius="8sp"
                    android:id="@+id/btn_paymentHistory"
                    android:layout_marginStart="8sp"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceBody1"
                    android:text="@string/backToHome"
                    android:layout_marginStart="8sp"
                    app:icon="@drawable/home"
                    app:iconGravity="end"
                    app:cornerRadius="8sp"
                    android:id="@+id/btn_backToHome"
                    android:layout_marginEnd="8sp"/>
            </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>