<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginTop="32sp"
       android:gravity="center_horizontal">
       <com.google.android.material.imageview.ShapeableImageView
           android:layout_width="72sp"
           android:layout_height="72sp"
           android:src="@drawable/ic_nike_logo"
           android:scaleType="centerInside"
           app:strokeWidth="2sp"
           app:strokeColor="?dividerColorMy"
           app:shapeAppearance="@style/Avatar"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?textAppearanceHeadline6"
           tools:text="alireza@gmail.com"
           android:layout_marginTop="8sp"
           android:id="@+id/txt_usernameProfile"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="16sp"
           android:divider="@drawable/shape_divider_profile"
           android:showDividers="middle|beginning|end">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/itemProfile"
               android:text="@string/favoriteList"
               app:drawableStartCompat="@drawable/ic_favorites"
               android:id="@+id/txt_favoriteProfile"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/itemProfile"
               android:text="@string/payHistory"
               app:drawableStartCompat="@drawable/hisorypay"
               android:id="@+id/txt_paymentHistoryProfile"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/itemProfile"
               android:text="@string/loginToAccount"
               app:drawableStartCompat="@drawable/baseline_login_24"
               android:id="@+id/txt_loginProfile"/>
       </LinearLayout>
   </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>