<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feucher.comment.AddCommentActivity"
    android:layoutDirection="rtl">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourComment"
            android:textAppearance="?textAppearanceHeadline6"/>
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_marginEnd="8sp"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackground"
            android:id="@+id/btnBackCommentAdd"/>
    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputL"
            android:id="@+id/tIL_titleCommentAdd"
            android:layout_marginTop="16sp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tIE_titleCommentAdd"
                android:hint="@string/titleComment"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputL"
            android:id="@+id/tIL_contentCommentAdd"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tIE_contentCommentAdd"
                android:hint="@string/myComment"
                android:minLines="4"
                android:gravity="start"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody1"
                android:text="@string/add_comment"
                android:paddingTop="8sp"
                android:paddingBottom="8sp"
                android:layout_marginStart="26sp"
                android:layout_marginEnd="26sp"
                android:elevation="8sp"
                android:id="@+id/btn_addCommentToList"/>
            <ProgressBar
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:translationZ="12sp"
                android:layout_gravity="center"
                android:id="@+id/progressAddComment"
                android:indeterminateTint="@color/white"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>